--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,9 @@ dependencies = [
     "s3fs>=2023.10.0",
     "universal-pathlib>=0.1.4",
     "boto3>=1.1.0",
+    "npc_ephys",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
 classifiers = [
